Fix stacking buttons on mobile on item modals

--- a/projects/app/src/app/features/inventory/components/item-form-modal/item-form-modal.component.scss
+++ b/projects/app/src/app/features/inventory/components/item-form-modal/item-form-modal.component.scss
@@ -14,6 +14,7 @@ h2 {
   margin-top: 2rem;
   display: flex;
   justify-content: flex-end;
+  flex-wrap: wrap;
   gap: 1rem;
   align-items: center;
 }
