--- a/projects/app/src/app/features/list/components/item-form-modal/item-form-modal.component.scss
+++ b/projects/app/src/app/features/list/components/item-form-modal/item-form-modal.component.scss
@@ -13,6 +13,7 @@ h2 {
 ._footer {
   margin-top: 2rem;
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-end;
   gap: 1rem;
   align-items: center;
